# rawrri

./: .gitignore  GEMINI.md  LICENSE  README.md  index.html  package-lock.json  package.json
.test_examples/: README.md
docs/: architecture.md  filename_realities.md  prd.md  roadmap.md
plans/: comprehensive_prd.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analysis.rs  cache.rs  db.rs  export.rs  filename_parser.rs  lib.rs  logging.rs  main.rs  metadata.rs  models.rs  models_manager.rs  pairing.rs  playback.rs  scanner.rs  settings.rs  state.rs  video_surface.rs  worker.rs
src/components/: ObservationPanel.tsx  PairDetails.tsx  RecordingList.tsx
src/hooks/: useKeyboardPairNav.ts
src/lib/: api.ts  format.ts
