[package]
name = "k6player"
version = "0.1.0"
description = "Fast desktop viewer for INNOVV K6 front/rear dashcam footage, with paired playback and basic clip export."
authors = ["Anthony Ma"]
edition = "2021"

[lib]
name = "k6player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
walkdir = "2.5"
