[package]
name = "rawrii"
version = "0.1.0"
description = "Fast desktop viewer for paired front/rear dashcam footage, with basic clip export."
authors = ["Anthony Ma"]
edition = "2021"

[lib]
name = "rawrii_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
regex = "1.10"
raw-window-handle = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
walkdir = "2.5"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
ort = "2.0.0-rc.9"
image = "0.25"
